- Minor z-index tweak to ensure initial loading message is always on top

--- a/mon.createlab.org/www/assets/stylesheets/breathecam.css
+++ b/mon.createlab.org/www/assets/stylesheets/breathecam.css
@@ -169,7 +169,7 @@ a img {
   width: auto;
   height: auto;
   background: white;
-  z-index: 999;
+  z-index: 9000;
 }
 
 #loadingImg {
